update image & Title

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <section id="hero" class=" h-dvh flex justify-center">
             <div class="container flex flex-col-reverse lg:flex-row justify-center  lg:justify-between px-4 lg:px-0 ">
                 <div class="my-9 lg:my-auto ext-center lg:text-left flex flex-col items-center lg:items-start ">
-                    <div class="">
+                    <div class="flex flex-col items-center lg:items-start">
+                        <img src="./assets/img/l-siapdol.png" alt="logo siapdol sumedang" class="w-1/3 pb-2 ">
                         <h1 class="text-4xl text-center lg:text-start lg:text-6xl font-semibold text-primary-900 ">
                             Temukan
                             Informasi Pajak Anda</h1>
-                        <p class="text-xl text-center lg:text-start text font-medium text-gray-600 py-8 ">Portal
-                            Sistem
-                            Informasi Pajak Kab. Sumedang</p>
+                        <p class="text-xl text-center lg:text-start text font-medium text-gray-600 py-8 ">Sistem
+                            Aplikasi Pajak Daerah Online Kab. Sumedang</p>
                     </div>
                     <!-- Form pencarian -->
                     <form id="searchForm" class="relative w-4/5">
@@ -111,6 +111,11 @@
                             <img src="./assets/img/pbb.svg" alt="informasi pajak bumi dan bangunan kabupaten sumedang">
                             <h2 class="card-title">Informasi PBB</h2>
                         </button>
+                        <a href="https://bphtb.sumedangkab.go.id/" target="_blank"
+                            class="flex flex-col items-center gap-2 w-1/4 md:w-[214px]">
+                            <img src="./assets/img/bphtb.svg" alt="pajak  perhotelan kabupaten sumedang">
+                            <h2 class="card-title">BPHTB</h2>
+                        </a>
                         <a href="https://sippadu.sumedangkab.go.id/wp"
                             class="flex flex-col items-center gap-2 w-1/4 md:w-[214px]">
                             <img src="./assets/img/hotel.svg" alt="pajak  perhotelan kabupaten sumedang">
@@ -161,8 +166,8 @@
                     </div>
                     <!-- row 2 -->
                     <div class="flex flex-col xl:flex-row gap-8">
-                        <div
-                            class="flex w-full xl:w-1/2 bg-white rounded-2xl flex-col justify-center items-start gap-4 self-stretch p-6 sh">
+                        <div class="flex w-full xl:w-1/2 bg-white rounded-2xl flex-col justify-center items-start gap-4
+                            self-stretch p-6 sh">
                             <span class="flex flex-row text-3xl font-semibold"><svg width="33" height="33"
                                     viewBox="0 0 33 33" fill="none">
                                     <path opacity="0.5"
@@ -171,53 +176,32 @@
                                     <path
                                         d="M9.83337 9.31299C9.56816 9.31299 9.3138 9.41834 9.12627 9.60588C8.93873 9.79342 8.83337 10.0478 8.83337 10.313C8.83337 10.5782 8.93873 10.8326 9.12627 11.0201C9.3138 11.2076 9.56816 11.313 9.83337 11.313H10.5C10.7653 11.313 11.0196 11.2076 11.2071 11.0201C11.3947 10.8326 11.5 10.5782 11.5 10.313C11.5 10.0478 11.3947 9.79342 11.2071 9.60588C11.0196 9.41834 10.7653 9.31299 10.5 9.31299H9.83337ZM14.5 9.31299C14.2348 9.31299 13.9805 9.41834 13.7929 9.60588C13.6054 9.79342 13.5 10.0478 13.5 10.313C13.5 10.5782 13.6054 10.8326 13.7929 11.0201C13.9805 11.2076 14.2348 11.313 14.5 11.313H23.1667C23.4319 11.313 23.6863 11.2076 23.8738 11.0201C24.0614 10.8326 24.1667 10.5782 24.1667 10.313C24.1667 10.0478 24.0614 9.79342 23.8738 9.60588C23.6863 9.41834 23.4319 9.31299 23.1667 9.31299H14.5ZM9.83337 13.9797C9.56816 13.9797 9.3138 14.085 9.12627 14.2725C8.93873 14.4601 8.83337 14.7144 8.83337 14.9797C8.83337 15.2449 8.93873 15.4992 9.12627 15.6868C9.3138 15.8743 9.56816 15.9797 9.83337 15.9797H10.5C10.7653 15.9797 11.0196 15.8743 11.2071 15.6868C11.3947 15.4992 11.5 15.2449 11.5 14.9797C11.5 14.7144 11.3947 14.4601 11.2071 14.2725C11.0196 14.085 10.7653 13.9797 10.5 13.9797H9.83337ZM14.5 13.9797C14.2348 13.9797 13.9805 14.085 13.7929 14.2725C13.6054 14.4601 13.5 14.7144 13.5 14.9797C13.5 15.2449 13.6054 15.4992 13.7929 15.6868C13.9805 15.8743 14.2348 15.9797 14.5 15.9797H23.1667C23.4319 15.9797 23.6863 15.8743 23.8738 15.6868C24.0614 15.4992 24.1667 15.2449 24.1667 14.9797C24.1667 14.7144 24.0614 14.4601 23.8738 14.2725C23.6863 14.085 23.4319 13.9797 23.1667 13.9797H14.5ZM9.83337 18.6463C9.56816 18.6463 9.3138 18.7517 9.12627 18.9392C8.93873 19.1268 8.83337 19.3811 8.83337 19.6463C8.83337 19.9115 8.93873 20.1659 9.12627 20.3534C9.3138 20.541 9.56816 20.6463 9.83337 20.6463H10.5C10.7653 20.6463 11.0196 20.541 11.2071 20.3534C11.3947 20.1659 11.5 19.9115 11.5 19.6463C11.5 19.3811 11.3947 19.1268 11.2071 18.9392C11.0196 18.7517 10.7653 18.6463 10.5 18.6463H9.83337ZM14.5 18.6463C14.2348 18.6463 13.9805 18.7517 13.7929 18.9392C13.6054 19.1268 13.5 19.3811 13.5 19.6463C13.5 19.9115 13.6054 20.1659 13.7929 20.3534C13.9805 20.541 14.2348 20.6463 14.5 20.6463H23.1667C23.4319 20.6463 23.6863 20.541 23.8738 20.3534C24.0614 20.1659 24.1667 19.9115 24.1667 19.6463C24.1667 19.3811 24.0614 19.1268 23.8738 18.9392C23.6863 18.7517 23.4319 18.6463 23.1667 18.6463H14.5Z"
                                         fill="#005B32" />
-                                </svg>Pembayaran Pajak
+                                </svg>Pembayaran Pajak Melalui QRIS
                             </span>
-                            <div class="flex flex-col gap-4">
-                                <a href="https://bphtb.sumedangkab.go.id/" target="_blank" class="btn-primary"><svg
-                                        width="17" height="17" viewBox="0 0 17 17" fill="none">
-                                        <g clip-path="url(#clip0_488_555)">
-                                            <path
-                                                d="M1.83337 11.48C1.83337 9.59465 1.83337 8.65131 2.41937 8.06598C3.00471 7.47998 3.94804 7.47998 5.83337 7.47998H11.1667C13.052 7.47998 13.9954 7.47998 14.5807 8.06598C15.1667 8.65131 15.1667 9.59465 15.1667 11.48C15.1667 13.3653 15.1667 14.3086 14.5807 14.894C13.9954 15.48 13.052 15.48 11.1667 15.48H5.83337C3.94804 15.48 3.00471 15.48 2.41937 14.894C1.83337 14.3086 1.83337 13.3653 1.83337 11.48Z"
-                                                stroke="white" stroke-width="1.5" />
-                                            <path
-                                                d="M4.5 7.47982V6.14648C4.5 5.08562 4.92143 4.0682 5.67157 3.31806C6.42172 2.56791 7.43913 2.14648 8.5 2.14648C9.56087 2.14648 10.5783 2.56791 11.3284 3.31806C12.0786 4.0682 12.5 5.08562 12.5 6.14648V7.47982"
-                                                stroke="white" stroke-width="1.5" stroke-linecap="round" />
-                                            <path d="M5.83337 11.48H5.83937M8.49404 11.48H8.50004M11.1607 11.48H11.1667"
-                                                stroke="white" stroke-width="2" stroke-linecap="round"
-                                                stroke-linejoin="round" />
-                                        </g>
-                                        <defs>
-                                            <clipPath id="clip0_488_555">
-                                                <rect width="16" height="16" fill="white"
-                                                    transform="translate(0.5 0.812988)" />
-                                            </clipPath>
-                                        </defs>
-                                    </svg>
-                                    Login Petugas BPHTB</a>
-                                <div class="flex items-start content-start gap-2 self-stretch flex-wrap">
-                                    <button onclick="openModal('Bpbb', event)" class="btn-secondaryl">
-                                        Bayar PBB <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                                            viewBox="0 0 24 24">
-                                            <path fill="currentColor" fill-rule="evenodd"
-                                                d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
-                                                clip-rule="evenodd" /></svg>
-                                    </button>
-                                    <button onclick="openModal('Bbphtb', event)" class="btn-secondaryl">
-                                        Bayar BPHTB <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                                            viewBox="0 0 24 24">
-                                            <path fill="currentColor" fill-rule="evenodd"
-                                                d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
-                                                clip-rule="evenodd" /></svg>
-                                    </button>
-                                    <button onclick="openModal('Bpjdl', event)" class="btn-secondaryl">
-                                        Bayar PJDL <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
-                                            viewBox="0 0 24 24">
-                                            <path fill="currentColor" fill-rule="evenodd"
-                                                d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
-                                                clip-rule="evenodd" /></svg>
-                                    </button>
-                                </div>
+                            <p class="text-sm text-gray-500  font-medium">Silahkan pilih layanan berikut untuk membayar
+                                pajak:</p>
+                            <div class="flex items-start content-start gap-2 self-stretch flex-wrap">
+                                <button onclick="openModal('Bpbb', event)" class="btn-secondaryl">
+                                    Bayar PBB <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                        viewBox="0 0 24 24">
+                                        <path fill="currentColor" fill-rule="evenodd"
+                                            d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
+                                            clip-rule="evenodd" /></svg>
+                                </button>
+                                <button onclick="openModal('Bbphtb', event)" class="btn-secondaryl">
+                                    Bayar BPHTB <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                        viewBox="0 0 24 24">
+                                        <path fill="currentColor" fill-rule="evenodd"
+                                            d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
+                                            clip-rule="evenodd" /></svg>
+                                </button>
+                                <button onclick="openModal('Bpjdl', event)" class="btn-secondaryl">
+                                    Bayar PJDL <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                        viewBox="0 0 24 24">
+                                        <path fill="currentColor" fill-rule="evenodd"
+                                            d="M13.47 5.47a.75.75 0 0 1 1.06 0l6 6a.75.75 0 0 1 0 1.06l-6 6a.75.75 0 1 1-1.06-1.06l4.72-4.72H4a.75.75 0 0 1 0-1.5h14.19l-4.72-4.72a.75.75 0 0 1 0-1.06"
+                                            clip-rule="evenodd" /></svg>
+                                </button>
                             </div>
                         </div>
                         <div class="flex flex-col w-full xl:w-1/2 gap-5">
@@ -228,7 +212,7 @@
                                         <img src="./assets/img/tapping.webp" alt="logo tapping-box" class="w-12 h-auto">
                                         Tapping Box
                                     </span>
-                                    <p class="text-sm font-medium text-gray-600">Lihat data realtime tapping box</p>
+                                    <p class="text-sm font-medium text-gray-600">Lihat data realtime tapping box.</p>
                                 </div>
                                 <a href="https://tappingbox.sumedangkab.go.id/" target="_blank"
                                     class="btn-secondary">Lihat <svg xmlns="http://www.w3.org/2000/svg" width="1em"
@@ -252,7 +236,7 @@
                                         </svg>
                                         Realisasi PAD
                                     </span>
-                                    <p class="text-sm font-medium text-gray-600">Lihat realisai semua pajak</p>
+                                    <p class="text-sm font-medium text-gray-600">Lihat realisai semua pajak.</p>
                                 </div>
                                 <a href="https://siapdol.sumedangkab.go.id/siapdol/dashboard/v2" target="_blank" class="
                                     btn-secondary">Lihat <svg xmlns="http://www.w3.org/2000/svg" width="1em"
